@@ -19,6 +19,7 @@ requires = [
     'waitress',
     'jinja2',
     'pyramid_jinja2',
+    'pil',
     #'unittest2',
     #'sphinx==1.1.3',
     'stalker>=0.2.0.rc1'
